1st complete draft results acceleration techniques

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -37,6 +37,16 @@
 	file = {agelet_de_saracibar_1998_numerical_analysis_of_coupled_thermomechanical_frictional_contact_problems.pdf:/home/jose/Zotero/storage/LH4F6RI4/agelet_de_saracibar_1998_numerical_analysis_of_coupled_thermomechanical_frictional_contact_problems.pdf:application/pdf;De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:/home/jose/Zotero/storage/GERK99AQ/De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:application/pdf;De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:/home/jose/Zotero/storage/UEX3WT24/De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:application/pdf},
 }
 
+@book{de_souza_neto_computational_2008,
+	title = {Computational {Methods} for {Plasticity}: {Theory} and {Applications}},
+	isbn = {978-0-470-69452-7},
+	url = {https://books.google.pt/books?id=cBrQmlQW8YAC},
+	publisher = {Wiley},
+	author = {de Souza Neto, E.A. and Peric, D. and Owen, D.R.J.},
+	year = {2008},
+	lccn = {2008033260},
+}
+
 @article{simo_algorithms_1992,
 	title = {Algorithms for static and dynamic multiplicative plasticity that preserve the classical return mapping schemes of the infinitesimal theory},
 	volume = {99},
