--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,15 @@
 \usepackage{commath}
 \usepackage[retainorgcmds]{IEEEtrantools}
 \usepackage{siunitx}
+\sisetup{%
+  print-unity-mantissa=false,
+  % exponent-mode=engineering,
+  range-phrase = {\ \linebreak[0]\text{to}\ \nolinebreak},
+  list-separator = {\text{, }},
+  list-final-separator = {,\ \linebreak[0]\text{and }},
+  list-pair-separator = {\ \text{and}\ },
+  list-separator = {,\ \linebreak[0]}
+  }%
 \usepackage{multirow}
 \usepackage[widespace]{fourier}
 
@@ -64,7 +73,7 @@
 
 % Listing
 \usepackage{listings}
-\usepackage{xcolor}
+\usepackage[table]{xcolor}
 \usepackage{float}
 
 % Review notes:
@@ -368,8 +377,8 @@
 \include{mechanical_problem}
 \include{thermo_problem}
 \include{thermo_mechanical_problem}
-\include{solvers_for_coupled_fields}
 \include{validation_thermal_solver}
+\include{solvers_for_coupled_fields}
 \include{acceleration_techniques}
 \include{validation_acceleration}
 % \include{conclusions}
